{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 95,
  "lineage": "ca775ea5-dd0a-1977-9e1f-c6a31f6857e3",
  "resources": [
    {
      "module": "module.eks_deployment",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:385205418910:security-group/sg-0c7164b22a3784bed",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0c7164b22a3784bed",
            "ingress": [],
            "name": "eks-deployment-cluster-20251115141133197100000014",
            "name_prefix": "eks-deployment-cluster-",
            "owner_id": "385205418910",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "deployment",
              "Name": "eks-deployment-cluster",
              "Project": "prueba-devops"
            },
            "tags_all": {
              "Env": "deployment",
              "Name": "eks-deployment-cluster",
              "Project": "prueba-devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0161e310a3ba9c2e6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_deployment",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:385205418910:security-group/sg-0d8cb16970c9bc93b",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0d8cb16970c9bc93b",
            "ingress": [],
            "name": "eks-deployment-node-20251115141133196600000013",
            "name_prefix": "eks-deployment-node-",
            "owner_id": "385205418910",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "deployment",
              "Name": "eks-deployment-node",
              "Project": "prueba-devops",
              "kubernetes.io/cluster/eks-deployment": "owned"
            },
            "tags_all": {
              "Env": "deployment",
              "Name": "eks-deployment-node",
              "Project": "prueba-devops",
              "kubernetes.io/cluster/eks-deployment": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0161e310a3ba9c2e6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_deployment",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2919198494",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c7164b22a3784bed",
            "security_group_rule_id": "sgr-040e8ea3f55c26237",
            "self": false,
            "source_security_group_id": "sg-0d8cb16970c9bc93b",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_deployment.aws_security_group.cluster",
            "module.eks_deployment.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_deployment",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-933595744",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d8cb16970c9bc93b",
            "security_group_rule_id": "sgr-00461311b46857772",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_deployment.aws_security_group.cluster",
            "module.eks_deployment.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-4241758798",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d8cb16970c9bc93b",
            "security_group_rule_id": "sgr-0b82a41fdde82b614",
            "self": false,
            "source_security_group_id": "sg-0c7164b22a3784bed",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_deployment.aws_security_group.cluster",
            "module.eks_deployment.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-632685566",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d8cb16970c9bc93b",
            "security_group_rule_id": "sgr-0f583f7a808ff16b8",
            "self": false,
            "source_security_group_id": "sg-0c7164b22a3784bed",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_deployment.aws_security_group.cluster",
            "module.eks_deployment.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3975439464",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d8cb16970c9bc93b",
            "security_group_rule_id": "sgr-048a6016d3dd80f7f",
            "self": false,
            "source_security_group_id": "sg-0c7164b22a3784bed",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_deployment.aws_security_group.cluster",
            "module.eks_deployment.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-4289222729",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d8cb16970c9bc93b",
            "security_group_rule_id": "sgr-07e1e25245a8c660d",
            "self": false,
            "source_security_group_id": "sg-0c7164b22a3784bed",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_deployment.aws_security_group.cluster",
            "module.eks_deployment.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2601085826",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d8cb16970c9bc93b",
            "security_group_rule_id": "sgr-09d04020efa060f75",
            "self": false,
            "source_security_group_id": "sg-0c7164b22a3784bed",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_deployment.aws_security_group.cluster",
            "module.eks_deployment.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-511576938",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d8cb16970c9bc93b",
            "security_group_rule_id": "sgr-05741eb2d6e98c66a",
            "self": false,
            "source_security_group_id": "sg-0c7164b22a3784bed",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_deployment.aws_security_group.cluster",
            "module.eks_deployment.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-4006099490",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d8cb16970c9bc93b",
            "security_group_rule_id": "sgr-01f9ca197ac3a473e",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_deployment.aws_security_group.cluster",
            "module.eks_deployment.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-246732490",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d8cb16970c9bc93b",
            "security_group_rule_id": "sgr-018115d72d078efa5",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_deployment.aws_security_group.cluster",
            "module.eks_deployment.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-2867557669",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0d8cb16970c9bc93b",
            "security_group_rule_id": "sgr-019f22c90dee8f1f5",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_deployment.aws_security_group.cluster",
            "module.eks_deployment.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_development",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:385205418910:security-group/sg-0c98f3dce8858e02d",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0c98f3dce8858e02d",
            "ingress": [],
            "name": "eks-development-cluster-20251115141136444700000018",
            "name_prefix": "eks-development-cluster-",
            "owner_id": "385205418910",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "development",
              "Name": "eks-development-cluster",
              "Project": "prueba-devops"
            },
            "tags_all": {
              "Env": "development",
              "Name": "eks-development-cluster",
              "Project": "prueba-devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0161e310a3ba9c2e6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_development",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:385205418910:security-group/sg-06f5989687f2a0ca4",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-06f5989687f2a0ca4",
            "ingress": [],
            "name": "eks-development-node-20251115141136444400000017",
            "name_prefix": "eks-development-node-",
            "owner_id": "385205418910",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "development",
              "Name": "eks-development-node",
              "Project": "prueba-devops",
              "kubernetes.io/cluster/eks-development": "owned"
            },
            "tags_all": {
              "Env": "development",
              "Name": "eks-development-node",
              "Project": "prueba-devops",
              "kubernetes.io/cluster/eks-development": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0161e310a3ba9c2e6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_development",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2615901606",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c98f3dce8858e02d",
            "security_group_rule_id": "sgr-002105d2844352274",
            "self": false,
            "source_security_group_id": "sg-06f5989687f2a0ca4",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_development.aws_security_group.cluster",
            "module.eks_development.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_development",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-676285404",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06f5989687f2a0ca4",
            "security_group_rule_id": "sgr-0b28a17cd5a11e95f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_development.aws_security_group.cluster",
            "module.eks_development.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-437855591",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06f5989687f2a0ca4",
            "security_group_rule_id": "sgr-0ed77ca89b10f454a",
            "self": false,
            "source_security_group_id": "sg-0c98f3dce8858e02d",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_development.aws_security_group.cluster",
            "module.eks_development.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-760572764",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06f5989687f2a0ca4",
            "security_group_rule_id": "sgr-0c6a675683b8c4dfb",
            "self": false,
            "source_security_group_id": "sg-0c98f3dce8858e02d",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_development.aws_security_group.cluster",
            "module.eks_development.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3826715850",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06f5989687f2a0ca4",
            "security_group_rule_id": "sgr-0fd9fde8797294628",
            "self": false,
            "source_security_group_id": "sg-0c98f3dce8858e02d",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_development.aws_security_group.cluster",
            "module.eks_development.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-4148900075",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06f5989687f2a0ca4",
            "security_group_rule_id": "sgr-0beb5233dc615f0bc",
            "self": false,
            "source_security_group_id": "sg-0c98f3dce8858e02d",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_development.aws_security_group.cluster",
            "module.eks_development.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2481586976",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06f5989687f2a0ca4",
            "security_group_rule_id": "sgr-0f4236b7894f42608",
            "self": false,
            "source_security_group_id": "sg-0c98f3dce8858e02d",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_development.aws_security_group.cluster",
            "module.eks_development.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1004865585",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06f5989687f2a0ca4",
            "security_group_rule_id": "sgr-090d0d0ca675149cc",
            "self": false,
            "source_security_group_id": "sg-0c98f3dce8858e02d",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_development.aws_security_group.cluster",
            "module.eks_development.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-246920478",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06f5989687f2a0ca4",
            "security_group_rule_id": "sgr-0d6a261397ac414f7",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_development.aws_security_group.cluster",
            "module.eks_development.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3391562874",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06f5989687f2a0ca4",
            "security_group_rule_id": "sgr-0e2c2c0bc71dee2c5",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_development.aws_security_group.cluster",
            "module.eks_development.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1853392789",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-06f5989687f2a0ca4",
            "security_group_rule_id": "sgr-0ab22ddb935871502",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_development.aws_security_group.cluster",
            "module.eks_development.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:385205418910:network-acl/acl-0329a54221003a589",
            "default_network_acl_id": "acl-0329a54221003a589",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0329a54221003a589",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "385205418910",
            "subnet_ids": [
              "subnet-02ff7e66d0ef4acfd",
              "subnet-063a3dc8e84e10547",
              "subnet-06791b994f16b21aa",
              "subnet-0fb1953451668ea5f"
            ],
            "tags": {
              "Name": "prueba-vicente-default",
              "Project": "prueba-devops"
            },
            "tags_all": {
              "Name": "prueba-vicente-default",
              "Project": "prueba-devops"
            },
            "vpc_id": "vpc-0161e310a3ba9c2e6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:385205418910:route-table/rtb-072b5badfcc0a1dd6",
            "default_route_table_id": "rtb-072b5badfcc0a1dd6",
            "id": "rtb-072b5badfcc0a1dd6",
            "owner_id": "385205418910",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "prueba-vicente-default",
              "Project": "prueba-devops"
            },
            "tags_all": {
              "Name": "prueba-vicente-default",
              "Project": "prueba-devops"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0161e310a3ba9c2e6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:385205418910:security-group/sg-062ac5996934c6cda",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-062ac5996934c6cda",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "385205418910",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prueba-vicente-default",
              "Project": "prueba-devops"
            },
            "tags_all": {
              "Name": "prueba-vicente-default",
              "Project": "prueba-devops"
            },
            "vpc_id": "vpc-0161e310a3ba9c2e6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07c47459ddf33b985",
            "arn": "arn:aws:ec2:eu-west-1:385205418910:elastic-ip/eipalloc-07c47459ddf33b985",
            "domain": "vpc",
            "id": "eipalloc-07c47459ddf33b985",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-54-247-26-36.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.247.26.36",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "prueba-vicente-eu-west-1a",
              "Project": "prueba-devops"
            },
            "tags_all": {
              "Name": "prueba-vicente-eu-west-1a",
              "Project": "prueba-devops"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:385205418910:internet-gateway/igw-032a01213f01b6975",
            "id": "igw-032a01213f01b6975",
            "owner_id": "385205418910",
            "tags": {
              "Name": "prueba-vicente",
              "Project": "prueba-devops"
            },
            "tags_all": {
              "Name": "prueba-vicente",
              "Project": "prueba-devops"
            },
            "vpc_id": "vpc-0161e310a3ba9c2e6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07c47459ddf33b985",
            "association_id": "eipassoc-09ae6f1c9ae403641",
            "connectivity_type": "public",
            "id": "nat-073893bea6a9a8e59",
            "network_interface_id": "eni-0373b78ecc01c210e",
            "private_ip": "10.0.101.233",
            "public_ip": "54.247.26.36",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06791b994f16b21aa",
            "tags": {
              "Name": "prueba-vicente-eu-west-1a",
              "Project": "prueba-devops"
            },
            "tags_all": {
              "Name": "prueba-vicente-eu-west-1a",
              "Project": "prueba-devops"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e4fd5e65a7f6900d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-073893bea6a9a8e59",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e4fd5e65a7f6900d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-032a01213f01b6975",
            "id": "r-rtb-0e1aa4f4e4ef7759e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e1aa4f4e4ef7759e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:385205418910:route-table/rtb-0e4fd5e65a7f6900d",
            "id": "rtb-0e4fd5e65a7f6900d",
            "owner_id": "385205418910",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prueba-vicente-private",
              "Project": "prueba-devops"
            },
            "tags_all": {
              "Name": "prueba-vicente-private",
              "Project": "prueba-devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0161e310a3ba9c2e6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:385205418910:route-table/rtb-0e1aa4f4e4ef7759e",
            "id": "rtb-0e1aa4f4e4ef7759e",
            "owner_id": "385205418910",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prueba-vicente-public",
              "Project": "prueba-devops"
            },
            "tags_all": {
              "Name": "prueba-vicente-public",
              "Project": "prueba-devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0161e310a3ba9c2e6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014bf20fccb510670",
            "route_table_id": "rtb-0e4fd5e65a7f6900d",
            "subnet_id": "subnet-02ff7e66d0ef4acfd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb9c463afcf34069",
            "route_table_id": "rtb-0e4fd5e65a7f6900d",
            "subnet_id": "subnet-0fb1953451668ea5f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7811f4d52b47d13",
            "route_table_id": "rtb-0e1aa4f4e4ef7759e",
            "subnet_id": "subnet-06791b994f16b21aa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c9b658047ac0c02",
            "route_table_id": "rtb-0e1aa4f4e4ef7759e",
            "subnet_id": "subnet-063a3dc8e84e10547"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:385205418910:subnet/subnet-02ff7e66d0ef4acfd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ff7e66d0ef4acfd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "385205418910",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prueba-vicente-private-eu-west-1a",
              "Project": "prueba-devops"
            },
            "tags_all": {
              "Name": "prueba-vicente-private-eu-west-1a",
              "Project": "prueba-devops"
            },
            "vpc_id": "vpc-0161e310a3ba9c2e6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:385205418910:subnet/subnet-0fb1953451668ea5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb1953451668ea5f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "385205418910",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prueba-vicente-private-eu-west-1b",
              "Project": "prueba-devops"
            },
            "tags_all": {
              "Name": "prueba-vicente-private-eu-west-1b",
              "Project": "prueba-devops"
            },
            "vpc_id": "vpc-0161e310a3ba9c2e6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:385205418910:subnet/subnet-06791b994f16b21aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06791b994f16b21aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "385205418910",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prueba-vicente-public-eu-west-1a",
              "Project": "prueba-devops"
            },
            "tags_all": {
              "Name": "prueba-vicente-public-eu-west-1a",
              "Project": "prueba-devops"
            },
            "vpc_id": "vpc-0161e310a3ba9c2e6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:385205418910:subnet/subnet-063a3dc8e84e10547",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063a3dc8e84e10547",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "385205418910",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prueba-vicente-public-eu-west-1b",
              "Project": "prueba-devops"
            },
            "tags_all": {
              "Name": "prueba-vicente-public-eu-west-1b",
              "Project": "prueba-devops"
            },
            "vpc_id": "vpc-0161e310a3ba9c2e6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:385205418910:vpc/vpc-0161e310a3ba9c2e6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0329a54221003a589",
            "default_route_table_id": "rtb-072b5badfcc0a1dd6",
            "default_security_group_id": "sg-062ac5996934c6cda",
            "dhcp_options_id": "dopt-043ef990c2e08527b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0161e310a3ba9c2e6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-072b5badfcc0a1dd6",
            "owner_id": "385205418910",
            "tags": {
              "Name": "prueba-vicente",
              "Project": "prueba-devops"
            },
            "tags_all": {
              "Name": "prueba-vicente",
              "Project": "prueba-devops"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}